# Helldivers-Discord-Bot

./: .gitignore  BotDatabaseWrapper.py  HelldiversBot.py  HelperFunctions.py  LICENSE  README.md
API/: APIWrapper.py  CurrentMO.py  pyproject.toml
API/helldivers_2_client/api/raw/: get_raw_api_stats_war_801_summary.py  get_raw_api_v2_assignment_war_801.py  get_raw_api_war_season_801_status.py  get_raw_api_war_season_801_war_info.py  get_raw_api_war_season_current_war_id.py
API/helldivers_2_client/api/v1/: get_api_v1_campaigns_all.py  get_api_v1_dispatches.py  get_api_v1_dispatches_all.py  get_api_v1_planet_events.py  get_api_v1_planets.py  get_api_v1_war.py
API/helldivers_2_client/models/: __init__.py  assignment.py  biome.py  campaign.py  campaign_2.py  event.py  home_world.py  joint_operation.py  planet.py  position.py  reward.py  reward_2.py  setting.py  steam_news.py  war_info.py
helldivers-2-client/: CurrentMO.py  README.md
helldivers-2-client/helldivers_2_client/: __init__.py
helldivers-2-client/helldivers_2_client/api/raw/: get_raw_api_news_feed_801.py
helldivers-2-client/helldivers_2_client/api/v1/: get_api_v1_assignments.py  get_api_v1_assignments_all.py  get_api_v1_campaigns.py  get_api_v1_planets_all.py  get_api_v1_steam.py  (+1 more)
helldivers-2-client/helldivers_2_client/models/: assignment_2.py  dispatch.py  galaxy_stats.py  hazard.py  news_feed_item.py  planet_attack.py  planet_coordinates.py  planet_event.py  planet_info.py  planet_stats.py  planet_status.py  statistics.py  task.py  task_2.py  war.py  war_id.py  war_status.py  war_summary.py
